# Agentic_RAG

./: README.md  pyproject.toml
assets/: ARCHITECTURE_DIAGRAM_SPEC.md
db/: chroma.sqlite3
src/agentic_rag/: crew.py  load_chroma_docs.py  main.py
src/agentic_rag/config/: agents.yaml  tasks.yaml
src/agentic_rag/tools/: chromadb_tool.py
